--- a/pom.xml
+++ b/pom.xml
@@ -43,38 +43,58 @@
 			<version>3.141.59</version>
 		</dependency>
 
-		<dependency>
+
+
+			<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>7.15.0</version>
+			</dependency>
+			<!--  https://mvnrepository.com/artifact/junit/junit  -->
+			<!--  https://mvnrepository.com/artifact/io.cucumber/cucumber-junit  -->
+			<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>7.15.0</version>
+			<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.cucumber</groupId>
+				<artifactId>cucumber-testng</artifactId>
+				<version>7.15.0</version>
+				<scope>test</scope>
+				</dependency>
+
+		<!-- <dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.6</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.6</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
-			<version>1.2.4</version>
+			<version>1.2.6</version>
 			<scope>test</scope>
-		</dependency>
-
+		</dependency> -->
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>4.2.2</version>
+			<version>5.6.3</version>
 			<scope>test</scope>
 		</dependency>
 
-
-		<dependency>
+		<!-- <dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-testng</artifactId>
-			<version>1.2.2</version>
-		</dependency>
+			<version>1.2.5</version>
+		</dependency> -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
@@ -83,9 +103,19 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.9.9</version>
+			<version>7.9.0</version>
 		</dependency>
-	</dependencies>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>8.0.32</version>
+	</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+		  </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
